fixed the list conversion